# mesh

./: .dockerignore  .env.agent.example  .env.example  .env.master.example  .flake8  Makefile  README.md  docker-compose.agent.yml  docker-compose.master.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/kosatka_agent/: bootstrap.py  config.py  host_manager.py  https_manager.py  installer.py  limiter.py  main.py  metrics.py  protector.py  security.py  shaper.py
agent/kosatka_agent/providers/: _wgcore.py  awg.py  marzban.py  singbox.py  wireguard.py  xray.py  xray_relay.py
agent/tests/: test_agent.py  test_awg_provider.py  test_bootstrap.py  test_installer.py  test_metrics.py  test_protector.py  test_providers.py  test_shaper.py  test_singbox_providers.py  test_wg_dump_parser.py  test_wgcore.py  test_xray_relay.py
ansible/: site.yml
ansible/group_vars/: all.yml
ansible/roles/agent/templates/: docker-compose.yml.j2
ansible/roles/master/templates/: docker-compose.yml.j2
ansible/roles/proxy/handlers/: main.yml
ansible/roles/proxy/tasks/: main.yml
ansible/roles/proxy/templates/: docker-compose.proxy.yml.j2  nginx.conf.j2
ansible/roles/security/handlers/: main.yml
ansible/roles/security/tasks/: main.yml
cli/kosatka_cli/: api.py  config.py  dns.py  doctor.py  host.py  join.py  main.py  monitor.py  nodes.py
cli/tests/: test_cli_api.py  test_nodes.py
docs/: DOCKER_DEPLOYMENT.md  api-reference.md  architecture.md  cli.md
docs/superpowers/plans/: 2024-05-24-load-balancing-optimization.md  2024-05-24-realtime-stats-monitor.md  2024-05-24-tc-shaping-logic.md  2026-05-24-advanced-stealth-analytics.md  2026-05-24-alembic-integration.md  2026-05-24-mesh-performance-optimization.md  2026-05-24-metrics-collector-ema.md  2026-05-24-node-roles-migration.md  2026-05-24-stealth-chaining-auto-install.md  2026-05-24-universal-experience-subscriptions.md
docs/superpowers/specs/: 2026-05-24-advanced-stealth-analytics-design.md  2026-05-24-mesh-performance-optimization-design.md  2026-05-24-stealth-chaining-auto-install.md  2026-05-24-universal-experience-subscriptions-design.md
master/: Dockerfile  pyproject.toml
master/alembic/: env.py
master/alembic/versions/: 0d522720a63d_add_node_roles.py  43cb03f7ac49_add_node_stats_table.py  7317e3316e78_initial_schema.py  8452a9308f45_add_client_sub_token.py
master/kosatka_master/: agent_client.py  config.py  database.py  http_client.py  instances.py  main.py  scheduler.py  security.py
master/kosatka_master/api/v1/: auth.py  clients.py  config.py  dashboard.py  host.py  limiter.py  nodes.py  public.py  router.py  routing.py  stats.py  subscriptions.py
master/kosatka_master/models/: __init__.py  alert.py  client.py  node.py  routing.py
master/kosatka_master/services/: auth.py  chain_manager.py  email.py  geoip_resolver.py  geosite_importer.py  host_monitor.py  node_manager.py  notifications.py  region_tracker.py  subscription_engine.py  subscription_generator.py  trial.py
master/kosatka_master/services/dns/: dns_service.py  https_manager.py  providers.py
master/kosatka_master/services/providers/: agent_provider.py
master/kosatka_master/static/: index.html  install.sh  manifest.json
master/kosatka_master/static/admin/: index.html
master/kosatka_master/static/admin/assets/: index-BV2qwdMQ.js  index-BfGCaAfU.js  index-TfAt5Ro2.css
master/kosatka_master/static/assets/: index-BH7VLbEN.js  index-BoVAggtp.js  index-BpWBKLd0.css  index-CZLWuKCG.js
master/templates/: dashboard.html
master/tests/: conftest.py  test_agent_provider.py  test_ansible_endpoint_auth.py  test_chain_provisioning.py  test_client_sub_token.py  test_clients_api.py  test_dashboard.py  test_database_init.py  test_dns_providers.py  test_geoip_resolver.py  test_geosite_importer.py  test_http_client.py  test_load_balancer.py  test_multi_hop.py  test_node_manager_metrics.py  test_node_manager_parallel.py  test_node_roles.py  test_nodes_api.py  test_public_trial.py  test_region_tracker.py  test_routing_api.py  test_scheduler.py  test_services.py  test_stats_api.py  test_sub_generator.py  test_subscriptions_api.py  test_subscriptions_logic.py
sdk/KosatkaMesh/: models.py
tests/performance/: locustfile.py  run_perf.sh
ui/: eslint.config.js  index.html  lighthouserc.cjs  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: Layout.tsx  NodeComponent.tsx
ui/src/context/: AuthContext.tsx
ui/src/pages/: Alerts.tsx  Dashboard.tsx  Login.tsx  Nodes.tsx  Settings.tsx  Setup.tsx
ui/src/test/: Login.test.tsx  setup.ts
