[project]
name = "kosatka-mesh"
version = "0.1.0"
description = "KOSATKA Mesh Monorepo"
requires-python = ">=3.10"
dependencies = [
    "kosatka-master",
    "kosatka-agent",
    "kosatka-mesh-sdk",
    "kosatka-cli",
    "slowapi>=0.1.9",
    "psutil>=7.2.2",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.scripts]
kosatka-mesh = "kosatka_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.21.1",
    "black>=26.5.1",
    "isort>=6.0.1",
    "flake8>=7.1.2",
    "locust>=2.44.0",
]

[tool.uv.workspace]
members = ["master", "agent", "sdk", "cli"]

[tool.uv.sources]
kosatka-master = { workspace = true }
kosatka-agent = { workspace = true }
kosatka-mesh-sdk = { workspace = true }
kosatka-cli = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
