[project]
name = "kosatka-master"
version = "0.1.0"
description = "Kosatka Mesh Master Node"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    # asyncpg is required by the production docker-compose.master.yml
    # which provisions a Postgres 16 container. Local dev still defaults
    # to sqlite via ``KOSATKA_DATABASE_URL`` so this is the only extra
    # cost — a few MB of wheel — to keep both backends supported from a
    # single codebase.
    "asyncpg",
    "pydantic-settings",
    "apscheduler",
    "httpx",
    "cryptography",
    "python-jose[cryptography]",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kosatka_master"]
