[project]
name = "kosatka-master"
version = "0.1.0"
description = "Kosatka Mesh Master Node"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    # asyncpg is required by the production docker-compose.master.yml
    # which provisions a Postgres 16 container. Local dev still defaults
    # to sqlite via ``KOSATKA_DATABASE_URL`` so this is the only extra
    # cost — a few MB of wheel — to keep both backends supported from a
    # single codebase.
    "asyncpg",
    "pydantic-settings",
    "apscheduler",
    "httpx",
    "h2",
    "cryptography",
    "python-jose[cryptography]",
    "python-multipart",
    "PyYAML",
    "psutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kosatka_master"]

[tool.coverage.run]
# FastAPI dispatches handlers via `anyio.to_thread.run_sync` for sync
# handlers and via the running event loop for async ones. Without
# ``concurrency = ['thread']`` pytest-cov misses every line executed
# inside the threadpool, which is why a passing endpoint test still
# reports its handler body as uncovered.
concurrency = ["thread", "greenlet"]
source = ["kosatka_master"]
